tests/e2e/invalid_return_type.error
Error: syntax error in story at line 1, column 26

1|    function foo returns list
                               ^

E0053: Unexpected end of line. Expected: ['_OSB'].
